--- a/css/slider.css
+++ b/css/slider.css
@@ -1,84 +1,100 @@
 /* Importation police */
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 /* font-family: 'Poppins', sans-serif; */
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-#Site {
-  background:linear-gradient(179.05deg, #B6D2FF -5.84%, rgba(0, 0, 0, 0.72) 177.08%);
-  height: 100vh;
-  font-family: "Poppins", sans-serif;
-}
-
-.logo {
-  text-align: center;
-  font-size: 2rem;
-  padding-top: 20px;
-}
-
-/* La boîte qui contient tout */
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 0px
-}
-
-/* Les images du slider */
-.slider img {
-  max-width: 100%;
-  display: none;
-}
-
-/* la premiere image "active" */
-img.active {
-  display: block;
-  animation: trans 0.8s;
-}
-
-/* la boîte des fléches */
-.cont-flc {
-  display: flex;
-  width: 100%;
-  height: 5vh;
-  justify-content: center;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
-}
-
-/* Les fléches */
-.flc-nav {
-  font-size: 30px;
-  margin: 0 15px;
-  cursor: pointer;
-}
-
-/* l'annimation en Keyframes*/
-@keyframes trans {
-  from {
-    opacity: 0;
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-  to {
-    opacity: 1;
+
+  #Site {
+    background: linear-gradient(179.05deg, #B6D2FF -5.84%, rgba(0, 0, 0, 0.72) 177.08%);
+    height: 100vh;
+    font-family: "poppins", sans-serif;
   }
-}
 
-/* button play */
-#button{
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  transition: 0.3s;
-  max-width: 100px;
-  margin: auto;
-}
-#btn-play{
-  width: 150px;
-}
+  footer {
+    bottom: 100%;
+  }
 
-#button:hover{
-transform: scale(1.1);
-cursor: pointer;
-}
+  
+  .logo {
+    text-align: center;
+    font-size: 1.5rem;
+    padding-top: 10px;
+    font-weight: 900;
+  }
+
+  /* La boîte qui contient tout */
+  .container {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  /* Les images du slider */
+  .slider img {
+    max-width: 100%;
+    display: none;
+  }
+
+  /* la premiere image "active" */
+  img.active {
+    display: block;
+    animation: trans 0.8s;
+  }
+
+  /* la boîte des fléches */
+  .cont-flc {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    justify-content: space-evenly;
+  }
+
+  /* Les fléches */
+  .flc-nav {
+    font-size: 35px;
+    margin: 0 15px;
+    cursor: pointer;
+
+  }
+
+  /* l'annimation en Keyframes*/
+  @keyframes trans {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+
+  /* button play */
+  #button {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    max-width: 275px;
+    margin: auto;
+  }
+
+  #btn-play {
+    width: 200px;
+    transition: 0.3s;
+  }
+
+  #btn-play:hover {
+    transform: scale(1.1);
+  }
+
+  footer {
+    bottom: 100%;
+  }
+
+
+
+
+
+
